blackroad-sf/force-app/main/default/objects/OrgRegistry__c/OrgRegistry__c.object-meta.xml
<CustomObject>
    <label>Org Registry</label>
    <pluralLabel>Org Registries</pluralLabel>
    <nameField><label>Org Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>