blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/AvatarUrl__c.field-meta.xml
<CustomField>
    <fullName>AvatarUrl__c</fullName>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>