blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/GithubOrg__c.field-meta.xml
<CustomField>
    <fullName>GithubOrg__c</fullName>
    <label>GitHub Org Slug</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>