blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/LastSyncedAt__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedAt__c</fullName>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>