blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/MonthlyCost__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCost__c</fullName>
    <label>Monthly Cost</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>