blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/OrgUrl__c.field-meta.xml
<CustomField>
    <fullName>OrgUrl__c</fullName>
    <label>Org URL</label>
    <type>Url</type>
</CustomField>