blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/PrivateRepos__c.field-meta.xml
<CustomField>
    <fullName>PrivateRepos__c</fullName>
    <label>Private Repos</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>