blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/PublicRepos__c.field-meta.xml
<CustomField>
    <fullName>PublicRepos__c</fullName>
    <label>Public Repos</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>