blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <label>Sync Status</label>
    <type>Text</type>
    <length>80</length>
</CustomField>