blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/TotalAgents__c.field-meta.xml
<CustomField>
    <fullName>TotalAgents__c</fullName>
    <label>Total Agents</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>