blackroad-sf/force-app/main/default/objects/OrgRegistry__c/fields/TotalRepos__c.field-meta.xml
<CustomField>
    <fullName>TotalRepos__c</fullName>
    <label>Total Repos</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>